# qnex

./: README.md  pyproject.toml
notebooks/: qiskit_qasm.ipynb
qnex/backend/: base_simulator.py  registry.py  types.py
qnex/backend/qiskit/: qiskit_simulator.py
qnex/dashboard/: app.py
qnex/dashboard/components/atoms/: visualization_circuit_diagram.py  visualization_counts.py  visualization_fidelity.py  visualization_probabilities.py
qnex/dashboard/components/molecules/: params_execution.py  params_noise.py  params_simulation.py
qnex/dashboard/components/organisms/: pane_qasm.py  pane_simulation.py  pane_visualizations.py  toolbar.py
src/: profile_manager.py
src/backend/: base_simulator.py  registry.py  types.py
src/backend/qiskit/: qiskit_simulator.py  qiskit_utils.py
src/dashboard/: app.py  styling.py
src/dashboard/components/atoms/: circuit_diagram.py  visualization_circuit_diagram.py  visualization_counts.py  visualization_fidelity.py  visualization_probabilities.py  visualization_qsphere.py
src/dashboard/components/molecules/: params_execution.py  params_noise.py  params_simulation.py  qasm_input.py
src/dashboard/components/organisms/: middle.py  pane_params.py  pane_qasm.py  pane_simulation.py  pane_visualizations.py  toolbar.py
src/utils/: complex_utils.py  qiskit_utils.py  quantum.py
