[tool.poetry]
name = "qc-noise-visualization"
version = "0.1.0"
description = ""
authors = ["Jelle Maas <typiqally@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.1.1"
dash = "^2.18.1"
pandas = "^2.2.3"
plotly = "^5.24.1"
dash-mantine-components = "^0.14.6"
qiskit = {extras = ["visualization", "qasm3-import"], version = "^1.2.4"}
qiskit-aer = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

