[tool.poetry]
name = "qnex"
version = "0.1.0"
description = "Quantum Noise Explorer"
authors = ["Jelle Maas <typiqally@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyter = "^1.1.1"
dash = { extras = ["diskcache"], version = "^2.18.1" }
pandas = "^2.2.3"
plotly = "^5.24.1"
dash-mantine-components = "^0.15.1"
natsort = "^8.4.0"
qiskit = { extras = ["visualization", "qasm3-import"], version = "^1.3.1" }
qiskit-aer = "^0.15.1"
qiskit-ibm-runtime = "^0.34.0"
notebook = "^7.3.2"
diskcache = "^5.6.3"
dash-iconify = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

